[gd_scene load_steps=4 format=3 uid="uid://c1qkhw0snj226"]

[ext_resource type="Script" path="res://src/ui/game_hud/game_hud.gd" id="1_3f8wa"]
[ext_resource type="Theme" uid="uid://b7yeo6jg078gl" path="res://src/ui/themes/main_theme.tres" id="2_main_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.92549, 0.92549, 0.92549, 1)

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_3f8wa")

[node name="ThemeContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_main_theme")

[node name="PlayerInfo" type="VBoxContainer" parent="ThemeContainer"]
unique_name_in_owner = true
offset_left = 60.0
offset_top = 60.0
offset_right = 280.0
offset_bottom = 140.0

[node name="PlayerHealthHBox" type="HBoxContainer" parent="ThemeContainer/PlayerInfo"]
layout_mode = 2

[node name="PlayerHealthLabel" type="Label" parent="ThemeContainer/PlayerInfo/PlayerHealthHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Health:"

[node name="PlayerHealthValue" type="Label" parent="ThemeContainer/PlayerInfo/PlayerHealthHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "5 / 5"

[node name="PlayerHealChargesHBox" type="HBoxContainer" parent="ThemeContainer/PlayerInfo"]
layout_mode = 2

[node name="PlayerHealChargesLabel" type="Label" parent="ThemeContainer/PlayerInfo/PlayerHealChargesHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Heal Charges:"

[node name="PlayerHealChargesValue" type="Label" parent="ThemeContainer/PlayerInfo/PlayerHealChargesHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="BossHealthBar" type="ProgressBar" parent="ThemeContainer"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 20.0
offset_right = -50.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1")
theme_override_styles/fill = SubResource("StyleBoxFlat_2")
max_value = 30.0
step = 1.0
value = 30.0
show_percentage = false

[node name="PhaseIndicators" type="HBoxContainer" parent="ThemeContainer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = 100.0
grow_horizontal = 0
alignment = 2